--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "contrib/Catch"]
 	path = contrib/Catch
 	url = https://github.com/philsquared/Catch.git
+[submodule "contrib/easytree"]
+	path = contrib/easytree
+	url = https://github.com/elelel/easytree.git
